# Sentinel-Copilot

./: .gitignore  CLAUDE.MD  CONTRIBUTING.md  LICENSE  README.md  REFACTORING_ANALYSIS.md  SECURITY.md  benchmark_throttling.py  config.json  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  requirements-dev.txt  requirements.txt  sentinel_monitor.py  sentinel_monitor_original.py  sentinel_monitor_refactored.py  setup.py  tailwind.config.ts  test_monitor.py
.github/: dependabot.yml
.github/workflows/: ci.yml
attached_assets/: asset_inventory_1767575318437.csv  content-1767574332021.md  controls_library_1767575318438.csv  evidence_index_1767575318437.csv  incident_alerts_1767575318437.jsonl  instruction_tuning_pairs_1767575318437.jsonl  org_profiles_1767575318437.json  pentesting_synth_10k_1767574022673.csv  remediation_tickets_1767575318438.csv  risk_register_1767575318438.csv  vuln_scan_findings_1767575318437.jsonl
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: app-sidebar.tsx  data-table.tsx  metric-card.tsx  page-header.tsx  severity-badge.tsx  status-badge.tsx  theme-provider.tsx
client/src/lib/: queryClient.ts
client/src/pages/: actions.tsx  activity.tsx  assets.tsx  authorizations.tsx  controls.tsx  dashboard.tsx  not-found.tsx  reports.tsx  settings.tsx  vulnerabilities.tsx
collections/example-collection/: manifest.json
docs/: copilot-codex-trading-bot-swarm-guide.md  sentinel-jedi-mcp-server.md
mcp_server/: __init__.py  requirements.txt  sentinel_jedi.py
mcp_server/config_examples/: claude_desktop_config.json  vscode_mcp_settings.json
script/: build.ts  collection-create.ts  collection-validate.ts  skill-create.ts  skill-validate.ts
server/: index.ts  kql-agent.ts  logger.ts  routes.ts  seed.ts  storage.ts
shared/: cli-schemas.ts  schema.ts
skills/example-skill/: manifest.json
